<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="help">Help</string>
    <string name="preferences">Settings</string>
    <string name="online">Play online</string>

    <string name="back">Back</string>
    <string name="cancel">Cancel</string>

    <string name="newnew">New</string>
    <string name="delete">Delete</string>
    <string name="undo">Undo</string>

    <string name="twice_to_exit">Press twice to exit</string>

    <!-- app -->

    <string name="flip">Flip piece</string>
    <string name="i_pass">I pass my turn</string>


    <string name="quit">Quit the game?</string>
    <string name="social">Social</string>


    <string name="new_game">New Game</string>
    <string name="red_ko">Red has no more moves</string>
    <string name="congratulations">Congratulations, you won with a score of: </string>
    <string name="try_next">Try the next level</string>
    <string name="wins_with_score">wins with a score of</string>

    <string name="Red">Player Red</string>
    <string name="Green">Player Green</string>
    <string name="Blue">Player Blue</string>
    <string name="Orange">Player Orange</string>


    <!-- rate form -->
    <string name="if_you_enjoy">If you enjoy Blokish, could you take a moment to rate the app?</string>
    <string name="now">OK</string>
    <string name="later">Later</string>
    <string name="never">No</string>


    <!-- preferences -->
    <string name="displaySeeds_title">Seeds display</string>
    <string name="displaySeeds_description">Display a dot where you may place a piece</string>

    <string name="ai_title">Artificial Intelligence</string>
    <string name="ai_description">Computer plays Green, Blue, and Yellow</string>

    <string name="aiLevel_title">Level</string>
    <string name="aiLevel_dialog">Select level</string>

    <string name="review">Review</string>


    <!-- help -->
    <string name="video_description_1">Click above to watch a demo on YouTube</string>
    <string name="video_description_2">You can enlarge the video by rotating the phone in landscape mode</string>

    <string name="rules_title">Rules of the game Blokus Classic</string>
    <string name="rules_text_1">
		- A board with 20 * 20 squares.
		\n- 4 players each have 21 pieces: 1 single-square, 1 domino, 2 triominos, 5 tetraminos, and 12 pentaminos.
		\n- As a player, you have to place as many pieces on the board as possible.
		\n- For the first piece, you must place a piece so that it touches one of the corners of the board.
		\n- Next, a piece must be placed so that it touches a corner of one of your own pieces. It may touch several corners, but never your pieces\' sides!
	</string>
    <string name="rules_text_2">
		- If you cannot place any more pieces, your game is over.
		\n- The end of the game is reached when every player either runs out of pieces to place, or cannot place any more pieces.
		\n- Score is calculated by the addition of all the squares of the pieces you place.
	</string>

    <string name="howToPlay_title">How to play with Blokish Android app</string>
    <string name="howToPlay_text_1">
		Smooth Drag&amp;Drop and swipe gestures to place the pieces.
		\n- Scroll through your remaining pieces with your finger from left to right.
	</string>
    <string name="howToPlay_text_2">- Select and drag a piece onto the board. You can now drag it around, easily putting the finger on the large grey circle.</string>
    <string name="howToPlay_text_3">- Rotate the piece using one of the handles.</string>
    <string name="howToPlay_text_4">
		- You can flip the piece to its mirror position with a long press.
		\nFlipping a piece can also be done using the menu (useful for tablets).
		\n- You can cancel with the red button. It will move the piece back to the bottom.
		\n- When the move is valid, a green \'ok\' button appears. You can commit the move by clicking it!
	</string>
    <string name="howToPlay_text_5">
		- At any time you can see your opponents\' remaining pieces. Just select the corresponding color at the bottom.
		\n- When you win against the machine, you can select a harder level via the Menu &gt; Preferences.
	</string>

    <string name="about" translatable="false">
		http://scoutant.org
		\nBlokish is aa free/libre open-source app, license under GPLv3.
		\nFeel free to use the code, you can get it at https://github.com/scoutant/blokish.
		\nStephane Coutant
	</string>

</resources>
