<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_back"
        android:icon="@drawable/left_48"
        android:title="@string/undo" />
    <item
        android:id="@+id/item_new"
        android:icon="@drawable/restart_48"
        android:title="@string/new_game" />
    <item
        android:id="@+id/item_help"
        android:icon="@drawable/help_48"
        android:title="@string/help" />
    <item
        android:id="@+id/item_preferences"
        android:icon="@drawable/preferences_48"
        android:title="@string/preferences" />
    <item
        android:id="@+id/more_apps"
        android:icon="@drawable/playstore"
        android:title="soutant.org" />
    <item
        android:id="@+id/item_flip"
        android:icon="@android:drawable/ic_menu_set_as"
        android:title="@string/flip"
        android:visible="false" />

</menu>
